# mcp-project-speckit

./: .gitignore  Add-UserToAdminGroup.ps1  ENTRA-API-SETUP.md  ENTRA-ID-SETUP.md  List-AdminGroupMembers.ps1  README.md  Setup-EntraIDAdminGroup.ps1  instructions.md  instructions.txt
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  IMPLEMENTATION_COMPLETE.md  README.md  make_admin.py  pyproject.toml  test_connection.py
backend/scripts/db/: README.md  init_schema.sql
backend/src/: config.py  database.py  dependencies.py  main.py
backend/src/auth/: __init__.py  entra_validator.py
backend/src/models/: __init__.py  audit_log.py  registration.py  user.py
backend/src/routers/: __init__.py  audit_logs.py  health.py  registrations.py  users.py
backend/src/schemas/: __init__.py  audit_log.py  registration.py  user.py
backend/src/services/: __init__.py  audit_service.py  registration_service.py  user_service.py
frontend/: .env.example  .eslintignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/config/: msal.config.ts
specs/001-mcp-registry-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fastapi-postgres-backend/: IMPLEMENTATION-NOTES.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-browse-audit-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+37 files in other folders)
